--- a/GradingSystem/View/Admin/ManageCourse.xaml
+++ b/GradingSystem/View/Admin/ManageCourse.xaml
@@ -12,7 +12,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!-- Dashboard Title -->
@@ -24,12 +24,12 @@
         </Grid>
 
         <Grid Grid.Row="1">
-            <Border Background="Black" Margin="10 10 10 10" CornerRadius="4">
-                <materialDesign:Card Background="White" Height="500">
+            <Border Background="Black" VerticalAlignment="Stretch" Margin="10 10 10 10" CornerRadius="4">
+                <materialDesign:Card Background="White" VerticalAlignment="Stretch">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="50"/>
-                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
                         <Grid Grid.Row="0" Effect="{StaticResource MaterialDesignElevationShadow1}">
@@ -53,8 +53,9 @@
                                         </Grid.ColumnDefinitions>
 
                                         <Grid Grid.Column="0">
-                                            <TextBox Style="{StaticResource searchBoxes}" Width="200"
-                                 Height="30">
+                                            <TextBox Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                                                     materialDesign:HintAssist.Hint="Search" Padding="10 0 0 0" Width="200"
+                                                     Height="30">
                                             </TextBox>
                                         </Grid>
                                         <Grid Grid.Column="1">
@@ -69,8 +70,17 @@
                             </materialDesign:Card>
                         </Grid>
 
-                        <Grid Grid.Row="1" Height="auto">
-                            <DataGrid x:Name="programDataGrid" ItemsSource="{Binding Programs}" AutoGenerateColumns="False">
+                        <Grid Grid.Row="1" VerticalAlignment="Stretch">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <DataGrid Grid.Row="0" x:Name="programDataGrid" ItemsSource="{Binding Programs}" Style="{StaticResource DataGridStyle1}"
+                                      RowStyle="{DynamicResource DataGridRowStyle1}"
+                                      ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+                                      CellStyle="{DynamicResource DataGridCellStyle1}" 
+                                      HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" 
+                                      VerticalAlignment="Stretch"
+                                      VerticalScrollBarVisibility="Auto">
 
                                 <DataGrid.Columns>
 
