--- a/GradingSystem/MainWindow.xaml
+++ b/GradingSystem/MainWindow.xaml
@@ -117,7 +117,7 @@ HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foregrou
                 <Grid Grid.Column="1" Background="#F6F5F8" Name="RenderPages">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <!-- Header Section with Buttons -->
                     <Grid Grid.Row="0" Margin="20 20 0 0">
@@ -133,8 +133,11 @@ HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foregrou
                         </Grid>
                     </Grid>
 
-                    <Grid Grid.Row="1" Margin="20">
-                        <ContentControl x:Name="MainContent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0" Padding="0"/>
+                    <Grid Grid.Row="1" Margin="10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <ContentControl Grid.Row="0" x:Name="MainContent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0" Padding="0"/>
                     </Grid>
                 </Grid>
             </Grid>
