--- a/GradingSystem/View/Admin/AddStudent.xaml
+++ b/GradingSystem/View/Admin/AddStudent.xaml
@@ -47,24 +47,16 @@
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
 
-                            <TextBox x:Name="FnameTxt" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                         Margin="0 10 20 20" Height="50" Width="300" FontSize="20"
-                         Grid.Column="0" MaxLength="20">
-                                <materialDesign:HintAssist.Hint>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="First Name" VerticalAlignment="Center"/>
-                                    </StackPanel>
-                                </materialDesign:HintAssist.Hint>
-                            </TextBox>
+                            <TextBox x:Name="FnameTxt" Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                                     Margin="0 10 20 20" Height="50" Width="300" FontSize="20"
+                                     Grid.Column="0" MaxLength="20" Padding="10 0 0 0"
+                                     materialDesign:HintAssist.Hint="First Name"/>
 
-                            <TextBox x:Name="LnameTxt"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                         Margin="0 10 0 20" Height="50" Width="300" FontSize="20"
-                         Grid.Column="1" MaxLength="20">
-                                <materialDesign:HintAssist.Hint>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Last Name" VerticalAlignment="Center"/>
-                                    </StackPanel>
-                                </materialDesign:HintAssist.Hint>
+
+                            <TextBox x:Name="LnameTxt"  Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                                     Margin="0 10 0 20" Height="50" Width="300" FontSize="20"
+                                     Grid.Column="1" MaxLength="20" Padding="10 0 0 0"
+                                     materialDesign:HintAssist.Hint="Last Name">
                             </TextBox>
                         </Grid>
 
@@ -75,25 +67,16 @@
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
 
-                            <TextBox x:Name="idTxt" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
- Margin="0 10 20 20" Height="50" Width="300" FontSize="20"
- Grid.Column="0" MaxLength="20">
-                                <materialDesign:HintAssist.Hint>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Student ID" VerticalAlignment="Center"/>
-                                    </StackPanel>
-                                </materialDesign:HintAssist.Hint>
-                            </TextBox>
+                            <TextBox x:Name="idTxt" Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                                     Margin="0 10 20 20" Height="50" Width="300" FontSize="20"
+                                     Grid.Column="0" MaxLength="20" Padding="10 0 0 0"
+                                     materialDesign:HintAssist.Hint="Student ID" />
 
-                            <TextBox x:Name="emailTxt"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
- Margin="0 10 0 20" Height="50" Width="300" FontSize="20"
- Grid.Column="1" MaxLength="20">
-                                <materialDesign:HintAssist.Hint>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Email" VerticalAlignment="Center"/>
-                                    </StackPanel>
-                                </materialDesign:HintAssist.Hint>
-                            </TextBox>
+
+                            <TextBox x:Name="emailTxt"  Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                                     Margin="0 10 0 20" Height="50" Width="300" FontSize="20"
+                                     Grid.Column="1" MaxLength="20" Padding="10 0 0 0"
+                                     materialDesign:HintAssist.Hint="Email Address" />
                         </Grid>
 
                         <Grid Grid.Row="2" Margin="0 0 0 0">
@@ -103,21 +86,17 @@
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
 
-                            <ComboBox x:Name="programCmb"  Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
-                                      Margin="0,10,20,0" Height="50" Width="300" FontSize="20" SelectedValuePath="ProgramName"
+                            <ComboBox x:Name="programCmb"  Style="{StaticResource MaterialDesignOutlinedComboBox}" 
+                                      Margin="0,10,20,0" Height="50" Width="300" FontSize="20" SelectedValuePath="ProgramId"
                                       Grid.Column="0" ItemsSource="{Binding Programs}"
-                                      DisplayMemberPath="ProgramName">
-                                <materialDesign:HintAssist.Hint>
-                                    Program
-                                </materialDesign:HintAssist.Hint>
+                                      DisplayMemberPath="ProgramName" Padding="10 0 10 0"
+                                      materialDesign:HintAssist.Hint="Program" >
                             </ComboBox>
 
-                            <ComboBox x:Name="yearCmb" Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                            <ComboBox x:Name="yearCmb" Style="{StaticResource MaterialDesignOutlinedComboBox}" 
                           Margin="0,10,20,0" Height="50" Width="300" FontSize="20"
-                          Grid.Column="1" SelectedValuePath="Content">
-                                <materialDesign:HintAssist.Hint>
-                                    YearLevel
-                                </materialDesign:HintAssist.Hint>
+                          Grid.Column="1" SelectedValuePath="Content" Padding="10 0 10 0"
+                                      materialDesign:HintAssist.Hint="Year Level">
 
                                 <ComboBoxItem>First Year</ComboBoxItem>
                                 <ComboBoxItem>Second Year</ComboBoxItem>
@@ -126,15 +105,23 @@
                             </ComboBox>
                         </Grid>
                         <Grid Grid.Row="3" Margin="0 0 0 0">
-                            <ComboBox x:Name="semesterCmb" Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+                            <ComboBox x:Name="semesterCmb" Style="{StaticResource MaterialDesignOutlinedComboBox}" 
                                       Margin="0,10,20,0" Height="50" Width="300" FontSize="20"
-                                      Grid.Column="1" SelectedValuePath="Content">
-                                <materialDesign:HintAssist.Hint>
-                                    Semester
-                                </materialDesign:HintAssist.Hint>
-
+                                      Grid.Column="0" SelectedValuePath="Content" Padding="10 0 10 0"
+                                      materialDesign:HintAssist.Hint="Semester" >
                                 <ComboBoxItem>First Semester</ComboBoxItem>
                                 <ComboBoxItem>Second Semester</ComboBoxItem>
+                            </ComboBox>
+                            <ComboBox x:Name="scholarCmb" Style="{StaticResource MaterialDesignOutlinedComboBox}" 
+                                      Margin="0,10,20,0" Height="50" Width="300" FontSize="20"
+                                      Grid.Column="1" SelectedValuePath="Content" Padding="10 0 10 0"
+                                      materialDesign:HintAssist.Hint="Scholar" >
+                                <ComboBoxItem>Non-Scholar</ComboBoxItem>
+                                <ComboBoxItem>Scholar</ComboBoxItem>
                             </ComboBox>
                         </Grid>
                     </Grid>
