--- a/GradingSystem/View/Admin/BulkInsertCourse.xaml
+++ b/GradingSystem/View/Admin/BulkInsertCourse.xaml
@@ -20,7 +20,20 @@
                     <Border Background="Black" Margin="05 05 05 05" CornerRadius="5" Width="800" HorizontalAlignment="Left">
                         <materialDesign:Card Effect="{StaticResource MaterialDesignElevationShadow1}" Width="auto">
 
-                            <DataGrid ItemsSource="{Binding Courses}" AutoGenerateColumns="True">
+                            <DataGrid ItemsSource="{Binding Courses}" Style="{StaticResource DataGridStyle1}"
+                                      RowStyle="{DynamicResource DataGridRowStyle1}"
+                                      ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+                                      CellStyle="{DynamicResource DataGridCellStyle1}">
+                                
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Id" Binding="{Binding SubjectId}"/>
+                                    <DataGridTextColumn Header="Name" Binding="{Binding SubjectName}"/>
+                                    <DataGridTextColumn Header="Course Code" Binding="{Binding CourseCode}"/>
+                                    <DataGridTextColumn Header="Units" Binding="{Binding Units}"/>
+                                    <DataGridTextColumn Header="Semester" Binding="{Binding Semester}"/>
+                                    <DataGridTextColumn Header="Year" Binding="{Binding YearLevel}"/>
+                                    <DataGridTextColumn Header="Program" Binding="{Binding ProgramId}"/>
+                                </DataGrid.Columns>
                             </DataGrid>
 
                         </materialDesign:Card>
