--- a/GradingSystem/View/Admin/Dialogs/ShowGrade.xaml
+++ b/GradingSystem/View/Admin/Dialogs/ShowGrade.xaml
@@ -5,102 +5,173 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GradingSystem.View.Admin.Dialogs"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:viewmodel="clr-namespace:GradingSystem.ViewModel" 
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen" Height="500" Width="700"
-        WindowStyle="None" Background="{x:Null}" AllowsTransparency="True" MouseDown="Window_MouseDown">
+        WindowStartupLocation="CenterScreen" Height="641" Width="700"
+        WindowStyle="None" Background="{x:Null}" AllowsTransparency="True" MouseDown="Window_MouseDown" Loaded="Window_Loaded">
     <Grid>
         <Border Background="Black" Padding="1" CornerRadius="3">
             <materialDesign:Card>
                 <Grid>
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="100"/>
                         <RowDefinition Height="50"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <Grid Grid.Row="0">
+
+                    <!-- Header Section -->
+                    <Grid Grid.Row="0" Background="#2E7D32" Width="Auto">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <!-- Logo Section -->
+                        <Image Source="/Resources/um-logo.png" Width="90" Height="90" 
+                               HorizontalAlignment="Left" Grid.Column="0" Margin="5"
+                               VerticalAlignment="Top"/>
+
+                        <!-- Title and Text Section -->
+                        <StackPanel HorizontalAlignment="Left" Margin="0,10,0,10" Grid.Column="1">
+                            <TextBlock Text="The University of Manila" FontSize="26" Foreground="White" FontWeight="Bold" HorizontalAlignment="Left" Margin="0,5"/>
+                            <TextBlock Text="546 Mariano V. delos Santos Street, Sampaloc Manila, Philippines 1008"
+                                       FontSize="14"
+                                       Foreground="White"
+                                       HorizontalAlignment="Left" Margin="0,2" TextWrapping="Wrap"/>
+                        </StackPanel>
+
+                        <!-- Right-side Extra Info Section -->
+                        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Grid.Column="2">
+                            <TextBlock Text="Contact: 8735-5085" FontSize="14" Foreground="White" HorizontalAlignment="Right" Margin="0,2"/>
+                            <TextBlock Text="Website: http://www.um.edu.ph" FontSize="14" Foreground="White" HorizontalAlignment="Right" Margin="0,2"/>
+                            <TextBlock Text="Email: umnla.edu.ph@gmail.com" FontSize="14" Foreground="White" HorizontalAlignment="Right" Margin="0,2"/>
+                        </StackPanel>
+                    </Grid>
+
+                    <!-- Title Section -->
+                    <Grid Grid.Row="1">
                         <Border>
-                            <materialDesign:Card Background="DarkGreen">
+                            <materialDesign:Card Background="#388E3C" Margin="0,5">
                                 <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid Grid.Column="0">
-                                        <TextBlock Text="Show Grade" FontSize="20" Foreground="white"
-                                                   Padding="10 0 0 0" Margin="10"
-                                                   Style="{StaticResource MaterialDesignCaptionTextBlock}">
-                                            
-                                        </TextBlock>
-                                    </Grid>
-                                    <Grid Grid.Column="1">
-                                        
-                                    </Grid>
+                                    <TextBlock Text="Grade Verification" FontSize="22" Foreground="white"
+                                               Padding="10" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                               Style="{StaticResource MaterialDesignCaptionTextBlock}"/>
                                 </Grid>
                             </materialDesign:Card>
                         </Border>
                     </Grid>
-                    <Grid Grid.Row="1">
+
+                    <!-- Content Section -->
+                    <Grid Grid.Row="2">
                         <Grid>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="150"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="50"/>
+                                <RowDefinition Height="750"/>
                             </Grid.RowDefinitions>
-                            <Grid Grid.Row="0">
-                                <Border>
-                                    <materialDesign:Card Background="White">
+
+                            <!-- Student Information Section -->
+                            <Grid Grid.Row="0" Margin="0,0,0,520">
+                                <Border Margin="10,10,10,115" CornerRadius="5" BorderBrush="#BDBDBD" BorderThickness="1">
+                                    <materialDesign:Card Background="White" Margin="0,0,0,0">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"/>
                                                 <ColumnDefinition Width="*"/>
                                                 <ColumnDefinition Width="*"/>
                                             </Grid.ColumnDefinitions>
+
                                             <Grid.RowDefinitions>
-                                                <RowDefinition Height="*"/>
-                                                <RowDefinition Height="*"/>
-                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
                                             </Grid.RowDefinitions>
 
-                                            <Grid Grid.Row="0" Grid.Column="0">
-                                                <TextBox Margin="5" Text="{Binding StudentId}" FontSize="15" Padding="10 0 0 0"
-                                                         Style="{StaticResource MaterialDesignOutlinedTextBox}"></TextBox>
+                                            <Grid Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left">
+                                                <TextBlock Margin="5" FontSize="12" FontWeight="Bold" Style="{StaticResource MaterialDesignHeadline1TextBlock}">
+                                                    Full Name:
+                                                </TextBlock>
                                             </Grid>
-                                            <Grid Grid.Row="0" Grid.Column="1">
-                                                <TextBox Margin="5" Text="{Binding StudentName}" FontSize="15" Padding="10 0 0 0"
-                                                         Style="{StaticResource MaterialDesignOutlinedTextBox}"></TextBox>
-                                            </Grid>
-                                            <Grid Grid.Row="1" Grid.Column="0">
-                                                <TextBox Margin="5" Text="{Binding Program}" FontSize="15" Padding="10 0 0 0"
-                                                         Style="{StaticResource MaterialDesignOutlinedTextBox}"></TextBox>
-                                            </Grid>
-                                            <Grid Grid.Row="1" Grid.Column="1">
-                                                <TextBox Margin="5" Text="{Binding Semester}" FontSize="15" Padding="10 0 0 0" 
-                                                         Style="{StaticResource MaterialDesignOutlinedTextBox}"></TextBox>
-                                            </Grid>
-                                            <Grid Grid.Row="2" Grid.Column="0">
-                                                <TextBox Margin="5" Text="{Binding Email}" FontSize="15" Padding="10 0 0 0" 
-                                                         Style="{StaticResource MaterialDesignOutlinedTextBox}"></TextBox>
-                                            </Grid>
-                                            <Grid Grid.Row="2" Grid.Column="2">
-                                                <TextBox Margin="5" Text="{Binding YearLevel}" FontSize="15" Padding="10 0 0 0" 
-                                                         Style="{StaticResource MaterialDesignOutlinedTextBox}"></TextBox>
+                                            <Grid Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left">
+                                                <TextBlock Margin="5" FontSize="15" Style="{StaticResource MaterialDesignHeadline1TextBlock}">
+                                                    <TextBlock.Text>
+                                                        <MultiBinding StringFormat="{}{0} {1}">
+                                                            <Binding Path="SelectedStudent.FirstName"/>
+                                                            <Binding Path="SelectedStudent.LastName"/>
+                                                        </MultiBinding>
+                                                    </TextBlock.Text>
+                                                </TextBlock>
                                             </Grid>
 
+                                            <!-- Program Caption and Value -->
+                                            <Grid Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left">
+                                                <TextBlock Margin="5" FontSize="12" FontWeight="Bold" Style="{StaticResource MaterialDesignHeadline1TextBlock}">
+                                                    Program:
+                                                </TextBlock>
+                                            </Grid>
+                                            <Grid Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left">
+                                                <TextBlock Margin="5" Text="{Binding SelectedStudent.Program}" FontSize="15"
+                                                           Style="{StaticResource MaterialDesignHeadline1TextBlock}" TextWrapping="Wrap"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="1" Grid.Column="2" HorizontalAlignment="Left">
+                                                <TextBlock Margin="5" FontSize="12" FontWeight="Bold" Style="{StaticResource MaterialDesignHeadline1TextBlock}">
+                                                    Semester:
+                                                </TextBlock>
+                                            </Grid>
+                                            <Grid Grid.Row="1" Grid.Column="2" HorizontalAlignment="Left" Margin="70,0,0,30" Grid.RowSpan="2">
+                                                <TextBlock Margin="5" Text="{Binding SelectedStudent.Semester}" FontSize="15"
+                                                           Style="{StaticResource MaterialDesignHeadline1TextBlock}" TextWrapping="Wrap"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left">
+                                                <TextBlock Margin="5" FontSize="12" FontWeight="Bold" Style="{StaticResource MaterialDesignHeadline1TextBlock}">
+                                                    Email:
+                                                </TextBlock>
+                                            </Grid>
+                                            <Grid Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
+                                                <TextBlock Margin="5" Text="{Binding SelectedStudent.Email}" FontSize="15"
+                                                           Style="{StaticResource MaterialDesignHeadline1TextBlock}" TextWrapping="Wrap"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="2" Grid.Column="2" HorizontalAlignment="Left">
+                                                <TextBlock Margin="5" FontSize="12" FontWeight="Bold" Style="{StaticResource MaterialDesignHeadline1TextBlock}">
+                                                    Year Level:
+                                                </TextBlock>
+                                            </Grid>
+                                            <Grid Grid.Row="2" Grid.Column="2" HorizontalAlignment="Left" Margin="75,0,0,0">
+                                                <TextBlock Margin="9,5,1,5" Text="{Binding SelectedStudent.YearLevel}" FontSize="15"
+                                                           Style="{StaticResource MaterialDesignHeadline1TextBlock}" TextWrapping="Wrap"/>
+                                            </Grid>
                                         </Grid>
                                     </materialDesign:Card>
                                 </Border>
                             </Grid>
-                            <Grid Grid.Row="1">
-                                <DataGrid ItemsSource="{Binding StudentSubject}" AutoGenerateColumns="False">
+
+                            <!-- Student Grades Section -->
+                            <Grid Margin="0,230,0,70">
+                                <DataGrid x:Name="GradeDataGrid" ItemsSource="{Binding StudentSubjects}" AutoGenerateColumns="False" Background="White" Margin="10,-108,10,200">
                                     <DataGrid.Columns>
-                                        <DataGridTextColumn Header="ID" Width="*"/>
-                                        <DataGridTextColumn Header="Course Code" Width="*"/>
-                                        <DataGridTextColumn Header="Professor" Width="*"/>
-                                        <DataGridTextColumn Header="Schedule" Width="*"/>
-                                        <DataGridTextColumn Header="Grade" Width="*"/>
+                                        <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
+                                        <DataGridTextColumn Header="Course Code" Binding="{Binding CourseCode}" Width="*"/>
+                                        <DataGridTextColumn Header="Professor" Binding="{Binding Professor}" Width="*"/>
+                                        <DataGridTextColumn Header="Schedule" Binding="{Binding Schedule}" Width="*"/>
+                                        <DataGridTemplateColumn Header="Grade" Width="*">
+                                            <DataGridTemplateColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Text="{Binding Grade}" 
+                                                               Style="{StaticResource GradeTextBlockStyle}" 
+                                                               Padding="10"/>
+                                                </DataTemplate>
+                                            </DataGridTemplateColumn.CellTemplate>
+                                        </DataGridTemplateColumn>
                                     </DataGrid.Columns>
                                 </DataGrid>
                             </Grid>
-                            <Grid Grid.Row="2">
-                                <Border>
+
+                            <!-- Signature Section -->
+                            <Grid Margin="0,680,0,0">
+                                <Border Margin="10" CornerRadius="5" BorderBrush="#BDBDBD" BorderThickness="1">
                                     <materialDesign:Card Background="White">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
@@ -108,23 +179,20 @@
                                                 <ColumnDefinition Width="*"/>
                                             </Grid.ColumnDefinitions>
 
-                                            <Grid Grid.Column="0">
-                                                <Button Margin="5" Background="DarkRed"
-                                                        Style="{StaticResource MaterialDesignFlatDarkBgButton}">
-                                                    <TextBlock
-                                                        Style="{StaticResource MaterialDesignButtonTextBlock}" Text="Close">
-
+                                            <Grid Grid.Column="0" Margin="0,10,100,35">
+                                                <Border BorderBrush="Black" BorderThickness="1" Margin="10,25,4,-2" RenderTransformOrigin="0.5,0.5">
+                                                    <TextBlock FontWeight="Bold" Margin="10" FontSize="13">
+                                                        <TextBlock.Text>Subject Teacher's Signature</TextBlock.Text>
                                                     </TextBlock>
-                                                </Button>
+                                                </Border>
                                             </Grid>
-                                            <Grid Grid.Column="1">
-                                                <Button Margin="5"
-                                                    Style="{StaticResource MaterialDesignFlatDarkBgButton}">
-                                                    <TextBlock
-                                                        Style="{StaticResource MaterialDesignButtonTextBlock}" Text="Print">
-                                                        
+
+                                            <Grid Grid.Column="1" Margin="100,10,0,35">
+                                                <Border BorderBrush="Black" BorderThickness="1" Margin="10,25,4,-2">
+                                                    <TextBlock FontWeight="Bold" Margin="10" FontSize="13">
+                                                        <TextBlock.Text>Registrar's Signature</TextBlock.Text>
                                                     </TextBlock>
-                                                </Button>
+                                                </Border>
                                             </Grid>
                                         </Grid>
                                     </materialDesign:Card>
